2001-03-06  Havoc Pennington  <hp@redhat.com>

        Merge from stable.
	
	* gconf/gconfd.c (gconf_main): change the periodic timeout to 15
	minutes, to be a bit more aggressive about cleanup.
	(open_append_handle): add a timeout to close the 
	saved_state filehandle after a short time, to avoid keeping
	descriptors open.
	(gconfd_need_log_cleanup): new internal function used to control 
	whether the periodic cleanup function needs to save a log file

2001-02-27  Havoc Pennington  <hp@redhat.com>

	* gconf.spec.in: %define prefix %{_prefix} instead of @prefix@

2001-02-27  Havoc Pennington  <hp@redhat.com>

        Merge from stable.
	
	* gconf/gconfd.c (main): Close stdin/stdout/stderr. Also, set the
	log handler, so we don't need stdout/stderr to see GLib messages,
	they go to syslog.

	* gconf/Makefile.am (INCLUDES): set the log domain

	* gconf/gconftool.c (recurse_subdir_list): the list contains full
	directory paths to start with, fix from Colm

	* gconf/gconfd.c (register_database): bugfix from Colm

	* gconf/gconf.c (lookup_engine): fix from Colm to check that we
	have an engines hash
	(gconf_engine_get_for_address): improve warning message, fix from
	Colm
	(gconf_engine_remove_dir): new function from Colm, this was
	implemented on the server side but somehow never exported.

	* gconf/gconf-database.c (gconf_database_get_persistent_name): Fix
	from Colm to handle the case of empty databases (no sources).

2001-02-05  Havoc Pennington  <hp@redhat.com>

        File permissions fixes, problem pointed out by Steve Fox.
	
	* backends/xml-dir.c (dir_sync): chmod() the XML file after
	xmlSaveFile creates it

	* gconf/gconfd.c (main): following Stevens advice for daemons, we
	were calling umask(0), change to umask(022). We need a predictable
	umask, but a safer one would be good since this is a per-user
	daemon not a system daemon.
	
	* backends/dir-utils.c (mode_t_to_mode): make this more portable,
	for paranoia
