@@ -1,3 +1,7 @@
+2001-03-12  Timur Bakeyev  <timur@gnu.org>
+
+	* Makefile.am: Made warning printing a bit nicer.
+	
 2001-03-06  Havoc Pennington  <hp@redhat.com>
 
         Merge from stable.
